# ValidateAndAddProduct-Refactoring-Kata

./: .gitignore  README.md
cpp/: CMakeLists.txt  IDatabase.h  Product.cpp  Product.h  ProductFormData.cpp  ProductFormData.h  ProductService.cpp  ProductService.h  README.md  Response.cpp  Response.h
cpp/tests/: CMakeLists.txt  FakeDatabase.cpp  FakeDatabase.h  product_service_test.cpp  product_service_test.test_example_statement.approved.txt  product_service_test.test_validate_and_add.approved.txt
csharp/: ValidationProject.sln
csharp/ValidationProject/: Class1.cs  FakeDatabase.cs  IDatabaseAccess.cs  Product.cs  ProductFormData.cs  ProductService.cs  Response.cs  StarterTest.cs  ValidationProject.csproj  ValidationTest.ValidateAndAdd.approved.txt  ValidationTest.cs
java/: pom.xml
java/src/main/java/codingdojo/: DatabaseAccess.java  Product.java  ProductFamily.java  ProductFormData.java  ProductRange.java  ProductService.java  Response.java  Validator.java
java/src/test/java/codingdojo/: PackageSettings.java  ProductServiceTest.java  ProductServiceTest.validateAndAdd.approved.txt  ValidatorTest.java
python/: database.py  model_objects.py  product_service.py  response.py
python/tests/: test_product_service.py  test_product_service.test_validate_and_add.approved.txt
